Use arrows for anchors

--- a/styles.less
+++ b/styles.less
@@ -21,7 +21,8 @@ a {
     left: 50%;
     transform: translate(-50%,-50%);
 
-    background: rgba(0,0,0,0.3);
+    // shape card background gradient, with separate opacities for white & black, pretty cool
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.3));
     padding: 1rem;
 
     color: #fff;
